--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 ### Customization
 # Brand Name
-VITE_BRAND_NAME=Ourenus
+VITE_BRAND_NAME=huenus
 # Brand Logo URL
 VITE_LOGO_SRC=https://raw.githubusercontent.com/MatinDehghanian/public-assets/refs/heads/main/icons/uranus.svg
 # Support URL
@@ -10,8 +10,8 @@ VITE_OFF_SECTIONS={"appsBox": true, "logoBox": true, "timeBox": true, "usageBox"
 # Apps JSON URL
 VITE_JSON_APPS_URL=https://raw.githubusercontent.com/MatinDehghanian/public-assets/refs/heads/main/json/os.json
 # Second Language Select {Options : < en > For English & < ru > for Russian}
-VITE_SECOND_LANG=en
+VITE_SECOND_LANG=ru
 
 ### Host Settings
 # Host URL 
-VITE_PANEL_DOMAIN=https://panel.example.com:8000
+# VITE_PANEL_DOMAIN=https://panel.example.com:8000
